@@ -12,7 +12,7 @@
       <license src="license.txt"></license>
       <releaseNotes src="releasenotes.txt"></releaseNotes>
       <dependencies>
-        <dependency type="CoreVersion">06.01.00</dependency>
+        <dependency type="CoreVersion">06.01.03</dependency>
       </dependencies>
       <components>
         <component type="ResourceFile">
@@ -38,7 +38,6 @@
             <skinFile>
               <name>Edit.ascx</name>
             </skinFile>
-
             <skinFile>
               <name>Home.ascx</name>
             </skinFile>
@@ -61,7 +60,7 @@
       <license src="license.txt"></license>
       <releaseNotes src="releasenotes.txt"></releaseNotes>
       <dependencies>
-        <dependency type="CoreVersion">06.01.00</dependency>
+        <dependency type="CoreVersion">06.01.03</dependency>
       </dependencies>
       <components>
         <component type="Container">
