@@ -1,4 +1,4 @@
-﻿<h3>Multifunction 01.01.02</h3>
+﻿<h3>Multifunction 01.01.03</h3>
 <p class="Contributor">
     Chris Hammond <br />
     <a href="mailto:skins@christoc.com">skins@christoc.com</a><br />
@@ -7,6 +7,17 @@
 <hr/>
 <div class="License">
     <h3>About the MultiFunction Skin and Container Package</h3>
+
+	 <p class="Owner">
+        <b>Version 01.01.03</b><br /><br />
+    </p>
+    <p>
+		<ul>
+			<li>Added some CSS for H1/2/3/4 to fix DotNetNuke 6.1.4 issues. </li>
+			<li>Compiled against v6.1.3, requires 6.1.3.</li>
+			<li>There is a MobileHome skin available in the Source package, it is not complete, not recommended for use.</li>
+		</ul>
+	</p>
 
 	 <p class="Owner">
         <b>Version 01.01.02</b><br /><br />
